<Release> Stable version

--- a/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
@@ -1,30 +1,106 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
     android:viewportWidth="108"
     android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
-    <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+    <group android:scaleX="0.91625977"
+        android:scaleY="0.91625977"
+        android:translateX="-21.06"
+        android:translateY="-21.06">
+        <path
+            android:pathData="M0.25,0L163.59,0c0.14,0 0.25,0.11 0.25,0.24L163.84,163.6c0,0.13 -0.11,0.24 -0.25,0.24L0.25,163.84c-0.14,0 -0.25,-0.11 -0.25,-0.24L0,0.24c0,-0.13 0.11,-0.24 0.25,-0.24z"
+            android:strokeWidth="0.193771"
+            android:fillColor="#ff7f2a"
+            android:strokeLineCap="round"/>
+        <path
+            android:pathData="m63.79,77.35v-5.48q0,-0.3 -0.02,-0.52 -0.02,-0.23 -0.06,-0.38 -0.05,-0.15 -0.14,-0.22 -0.09,-0.08 -0.25,-0.08 -0.25,0 -0.48,0.33 -0.24,0.33 -0.54,1.13v5.22h-1.66v-5.48q0,-0.3 -0.02,-0.52 -0.02,-0.23 -0.06,-0.38 -0.05,-0.15 -0.14,-0.22 -0.1,-0.08 -0.25,-0.08 -0.21,0 -0.46,0.33 -0.25,0.33 -0.56,1.13v5.22h-1.67v-8.05h1.43l0.03,1.17q0.17,-0.36 0.35,-0.61 0.17,-0.25 0.37,-0.41 0.2,-0.17 0.42,-0.24 0.23,-0.07 0.52,-0.07 0.67,0 1.02,0.36 0.36,0.35 0.4,0.97 0.19,-0.36 0.37,-0.61 0.19,-0.25 0.39,-0.41 0.21,-0.17 0.44,-0.24 0.24,-0.07 0.52,-0.07 0.88,0 1.3,0.62 0.42,0.61 0.42,1.81v5.78z"
+            android:strokeWidth="0.591344"
+            android:fillColor="#ffffff"
+            android:strokeLineCap="round"/>
+        <path
+            android:pathData="m73.73,69.26v7.92q0,0.08 -0.16,0.17L72.23,77.35q-0.08,0 -0.17,-0.17v-0.8h-0.06q-1.28,1.13 -2.37,1.13 -1.75,0 -2.53,-1.89 -0.21,-0.59 -0.27,-1.56 0,-3.7 3.34,-4.74 0.12,0 1.02,-0.1 0.46,0.05 0.71,0.05zM68.46,74.17q0.21,1.72 1.35,1.72h0.16q0.79,0 1.94,-1.56v-3.39q-0.06,-0.16 -0.32,-0.16h-0.91q-1.57,0 -2.16,2.53z"
+            android:strokeWidth="0.591344"
+            android:fillColor="#ffffff"
+            android:strokeLineCap="round"/>
+        <path
+            android:pathData="m82.59,77.27q-0.52,0.12 -1.05,0.19 -0.53,0.07 -1.01,0.07 -0.79,0 -1.37,-0.17 -0.57,-0.17 -0.95,-0.51 -0.37,-0.34 -0.55,-0.86 -0.17,-0.53 -0.17,-1.26v-3.93h-2.16v-1.51h2.16v-2.06l1.98,-0.52v2.58h3.13v1.51h-3.13v3.79q0,0.69 0.32,1.05 0.32,0.35 1.06,0.35 0.48,0 0.93,-0.08 0.45,-0.08 0.82,-0.18z"
+            android:strokeWidth="0.591344"
+            android:fillColor="#ffffff"
+            android:strokeLineCap="round"/>
+        <path
+            android:pathData="m89.67,77.35v-5.25q0,-1.32 -0.98,-1.32 -0.49,0 -0.94,0.4 -0.44,0.4 -0.94,1.08v5.09h-1.93v-11.2h1.93v2.76l-0.1,1.46q0.25,-0.29 0.5,-0.52 0.25,-0.24 0.55,-0.4 0.29,-0.16 0.63,-0.24 0.34,-0.09 0.75,-0.09 0.62,0 1.08,0.21 0.46,0.2 0.77,0.57 0.31,0.36 0.46,0.89 0.16,0.52 0.16,1.16v5.4z"
+            android:strokeWidth="0.591344"
+            android:fillColor="#ffffff"
+            android:strokeLineCap="round"/>
+        <path
+            android:pathData="m59.77,94.45q0.21,1.72 1.35,1.72h0.16q0.79,0 1.94,-1.56v-3.39q-0.06,-0.16 -0.32,-0.16h-0.91q-1.57,0 -2.16,2.53zM65.05,97.46q0,2.28 -1.93,3.26 -0.82,0.32 -1.66,0.32 -1.81,0 -3.42,-1.39 0,-0.19 0.64,-1.23 1.65,1.07 2.57,1.07h0.38q1.66,0 1.75,-2.04v-0.79h-0.06q-1.28,1.13 -2.37,1.13 -1.75,0 -2.53,-1.89 -0.21,-0.59 -0.27,-1.56 0,-3.7 3.34,-4.74 0.12,0 1.02,-0.1 0.46,0.05 0.71,0.05h1.83z"
+            android:strokeWidth="0.591344"
+            android:fillColor="#ffffff"
+            android:strokeLineCap="round"/>
+        <path
+            android:pathData="m73.73,89.55v7.92q0,0.08 -0.16,0.17L72.23,97.63q-0.08,0 -0.17,-0.17v-0.8h-0.06q-1.28,1.13 -2.37,1.13 -1.75,0 -2.53,-1.89 -0.21,-0.59 -0.27,-1.56 0,-3.7 3.34,-4.74 0.12,0 1.02,-0.1 0.46,0.05 0.71,0.05zM68.46,94.45q0.21,1.72 1.35,1.72h0.16q0.79,0 1.94,-1.56v-3.39q-0.06,-0.16 -0.32,-0.16h-0.91q-1.57,0 -2.16,2.53z"
+            android:strokeWidth="0.591344"
+            android:fillColor="#ffffff"
+            android:strokeLineCap="round"/>
+        <path
+            android:pathData="m81.63,97.63v-5.48q0,-0.3 -0.02,-0.52 -0.02,-0.23 -0.06,-0.38 -0.05,-0.15 -0.14,-0.22 -0.09,-0.08 -0.25,-0.08 -0.25,0 -0.48,0.33 -0.24,0.33 -0.54,1.13v5.22h-1.66v-5.48q0,-0.3 -0.02,-0.52 -0.02,-0.23 -0.06,-0.38 -0.05,-0.15 -0.14,-0.22 -0.1,-0.08 -0.25,-0.08 -0.21,0 -0.46,0.33 -0.25,0.33 -0.56,1.13v5.22h-1.67v-8.05h1.43l0.03,1.17q0.17,-0.36 0.35,-0.61 0.17,-0.25 0.37,-0.41 0.2,-0.17 0.42,-0.24 0.23,-0.07 0.52,-0.07 0.67,0 1.02,0.36 0.36,0.35 0.4,0.97 0.19,-0.36 0.37,-0.61 0.19,-0.25 0.39,-0.41 0.21,-0.17 0.44,-0.24 0.24,-0.07 0.52,-0.07 0.88,0 1.3,0.62 0.42,0.61 0.42,1.81v5.78z"
+            android:strokeWidth="0.591344"
+            android:fillColor="#ffffff"
+            android:strokeLineCap="round"/>
+        <path
+            android:pathData="m91.89,92.99q0,0.2 -0.02,0.52 -0.01,0.32 -0.03,0.59h-5.29q0,0.53 0.16,0.94 0.17,0.4 0.46,0.68 0.3,0.27 0.71,0.41 0.42,0.14 0.93,0.14 0.59,0 1.25,-0.09 0.67,-0.1 1.39,-0.3v1.54q-0.31,0.09 -0.67,0.16 -0.36,0.07 -0.74,0.13 -0.38,0.06 -0.77,0.08 -0.39,0.03 -0.75,0.03 -0.92,0 -1.65,-0.26 -0.73,-0.26 -1.24,-0.77 -0.51,-0.52 -0.78,-1.27 -0.27,-0.75 -0.27,-1.74 0,-0.98 0.27,-1.78 0.27,-0.81 0.76,-1.38 0.49,-0.58 1.19,-0.89 0.71,-0.32 1.57,-0.32 0.86,0 1.51,0.27 0.66,0.26 1.1,0.74 0.44,0.48 0.67,1.13 0.23,0.66 0.23,1.44zM89.92,92.71q0.01,-0.48 -0.12,-0.82 -0.13,-0.36 -0.35,-0.59 -0.21,-0.23 -0.51,-0.34 -0.29,-0.11 -0.62,-0.11 -0.73,0 -1.2,0.49 -0.47,0.48 -0.55,1.37z"
+            android:strokeWidth="0.591344"
+            android:fillColor="#ffffff"
+            android:strokeLineCap="round"/>
+        <path
+            android:pathData="m92.69,100.88v-1.53h8.92v1.53z"
+            android:strokeWidth="0.591344"
+            android:fillColor="#ffffff"
+            android:strokeLineCap="round"/>
+        <path
+            android:pathData="m64.67,76.79v-5.48q0,-0.3 -0.02,-0.52 -0.02,-0.23 -0.06,-0.38 -0.05,-0.15 -0.14,-0.22 -0.09,-0.08 -0.25,-0.08 -0.25,0 -0.48,0.33 -0.24,0.33 -0.54,1.13v5.22h-1.66v-5.48q0,-0.3 -0.02,-0.52 -0.02,-0.23 -0.06,-0.38 -0.05,-0.15 -0.14,-0.22 -0.1,-0.08 -0.25,-0.08 -0.21,0 -0.46,0.33 -0.25,0.33 -0.56,1.13v5.22h-1.67v-8.05h1.43l0.03,1.17q0.17,-0.36 0.35,-0.61 0.17,-0.25 0.37,-0.41 0.2,-0.17 0.42,-0.24 0.23,-0.07 0.52,-0.07 0.67,0 1.02,0.36 0.36,0.35 0.4,0.97 0.19,-0.36 0.37,-0.61 0.19,-0.25 0.39,-0.41 0.21,-0.17 0.44,-0.24 0.24,-0.07 0.52,-0.07 0.88,0 1.3,0.62 0.42,0.61 0.42,1.81v5.78z"
+            android:strokeWidth="0.591344"
+            android:fillColor="#d40000"
+            android:strokeLineCap="round"/>
+        <path
+            android:pathData="m74.62,68.71v7.92q0,0.08 -0.16,0.17L73.11,76.79q-0.08,0 -0.17,-0.17v-0.8h-0.06q-1.28,1.13 -2.37,1.13 -1.75,0 -2.53,-1.89 -0.21,-0.59 -0.27,-1.56 0,-3.7 3.34,-4.74 0.12,0 1.02,-0.1 0.46,0.05 0.71,0.05zM69.34,73.61q0.21,1.72 1.35,1.72h0.16q0.79,0 1.94,-1.56v-3.39q-0.06,-0.16 -0.32,-0.16h-0.91q-1.57,0 -2.16,2.53z"
+            android:strokeWidth="0.591344"
+            android:fillColor="#d40000"
+            android:strokeLineCap="round"/>
+        <path
+            android:pathData="m83.48,76.71q-0.52,0.12 -1.05,0.19 -0.53,0.07 -1.01,0.07 -0.79,0 -1.37,-0.17 -0.57,-0.17 -0.95,-0.51 -0.37,-0.34 -0.55,-0.86 -0.17,-0.53 -0.17,-1.26v-3.93h-2.16v-1.51h2.16v-2.06l1.98,-0.52v2.58h3.13v1.51h-3.13v3.79q0,0.69 0.32,1.05 0.32,0.35 1.06,0.35 0.48,0 0.93,-0.08 0.45,-0.08 0.82,-0.18z"
+            android:strokeWidth="0.591344"
+            android:fillColor="#d40000"
+            android:strokeLineCap="round"/>
+        <path
+            android:pathData="m90.56,76.79v-5.25q0,-1.32 -0.98,-1.32 -0.49,0 -0.94,0.4 -0.44,0.4 -0.94,1.08v5.09h-1.93v-11.2h1.93v2.76l-0.1,1.46q0.25,-0.29 0.5,-0.52 0.25,-0.24 0.55,-0.4 0.29,-0.16 0.63,-0.24 0.34,-0.09 0.75,-0.09 0.62,0 1.08,0.21 0.46,0.2 0.77,0.57 0.31,0.36 0.46,0.89 0.16,0.52 0.16,1.16v5.4z"
+            android:strokeWidth="0.591344"
+            android:fillColor="#d40000"
+            android:strokeLineCap="round"/>
+        <path
+            android:pathData="m60.66,93.9q0.21,1.72 1.35,1.72h0.16q0.79,0 1.94,-1.56v-3.39q-0.06,-0.16 -0.32,-0.16h-0.91q-1.57,0 -2.16,2.53zM65.93,96.91q0,2.28 -1.93,3.26 -0.82,0.32 -1.66,0.32 -1.81,0 -3.42,-1.39 0,-0.19 0.64,-1.23 1.65,1.07 2.57,1.07h0.38q1.66,0 1.75,-2.04v-0.79h-0.06q-1.28,1.13 -2.37,1.13 -1.75,0 -2.53,-1.89 -0.21,-0.59 -0.27,-1.56 0,-3.7 3.34,-4.74 0.12,0 1.02,-0.1 0.46,0.05 0.71,0.05h1.83z"
+            android:strokeWidth="0.591344"
+            android:fillColor="#d40000"
+            android:strokeLineCap="round"/>
+        <path
+            android:pathData="m74.62,88.99v7.92q0,0.08 -0.16,0.17L73.11,97.07q-0.08,0 -0.17,-0.17v-0.8h-0.06q-1.28,1.13 -2.37,1.13 -1.75,0 -2.53,-1.89 -0.21,-0.59 -0.27,-1.56 0,-3.7 3.34,-4.74 0.12,0 1.02,-0.1 0.46,0.05 0.71,0.05zM69.34,93.9q0.21,1.72 1.35,1.72h0.16q0.79,0 1.94,-1.56v-3.39q-0.06,-0.16 -0.32,-0.16h-0.91q-1.57,0 -2.16,2.53z"
+            android:strokeWidth="0.591344"
+            android:fillColor="#d40000"
+            android:strokeLineCap="round"/>
+        <path
+            android:pathData="m82.52,97.07v-5.48q0,-0.3 -0.02,-0.52 -0.02,-0.23 -0.06,-0.38 -0.05,-0.15 -0.14,-0.22 -0.09,-0.08 -0.25,-0.08 -0.25,0 -0.48,0.33 -0.24,0.33 -0.54,1.13v5.22h-1.66v-5.48q0,-0.3 -0.02,-0.52 -0.02,-0.23 -0.06,-0.38 -0.05,-0.15 -0.14,-0.22 -0.1,-0.08 -0.25,-0.08 -0.21,0 -0.46,0.33 -0.25,0.33 -0.56,1.13L77.88,97.07L76.2,97.07v-8.05h1.43l0.03,1.17q0.17,-0.36 0.35,-0.61 0.17,-0.25 0.37,-0.41 0.2,-0.17 0.42,-0.24 0.23,-0.07 0.52,-0.07 0.67,0 1.02,0.36 0.36,0.35 0.4,0.97 0.19,-0.36 0.37,-0.61 0.19,-0.25 0.39,-0.41 0.21,-0.17 0.44,-0.24 0.24,-0.07 0.52,-0.07 0.88,0 1.3,0.62 0.42,0.61 0.42,1.81v5.78z"
+            android:strokeWidth="0.591344"
+            android:fillColor="#d40000"
+            android:strokeLineCap="round"/>
+        <path
+            android:pathData="m92.77,92.43q0,0.2 -0.02,0.52 -0.01,0.32 -0.03,0.59h-5.29q0,0.53 0.16,0.94 0.17,0.4 0.46,0.68 0.3,0.27 0.71,0.41 0.42,0.14 0.93,0.14 0.59,0 1.25,-0.09 0.67,-0.1 1.39,-0.3v1.54q-0.31,0.09 -0.67,0.16 -0.36,0.07 -0.74,0.13 -0.38,0.06 -0.77,0.08 -0.39,0.03 -0.75,0.03 -0.92,0 -1.65,-0.26 -0.73,-0.26 -1.24,-0.77 -0.51,-0.52 -0.78,-1.27 -0.27,-0.75 -0.27,-1.74 0,-0.98 0.27,-1.78 0.27,-0.81 0.76,-1.38 0.49,-0.58 1.19,-0.89 0.71,-0.32 1.57,-0.32 0.86,0 1.51,0.27 0.66,0.26 1.1,0.74 0.44,0.48 0.67,1.13 0.23,0.66 0.23,1.44zM90.81,92.15q0.01,-0.48 -0.12,-0.82 -0.13,-0.36 -0.35,-0.59 -0.21,-0.23 -0.51,-0.34 -0.29,-0.11 -0.62,-0.11 -0.73,0 -1.2,0.49 -0.47,0.48 -0.55,1.37z"
+            android:strokeWidth="0.591344"
+            android:fillColor="#d40000"
+            android:strokeLineCap="round"/>
+        <path
+            android:pathData="m93.58,100.32v-1.53h8.92v1.53z"
+            android:strokeWidth="0.591344"
+            android:fillColor="#d40000"
+            android:strokeLineCap="round"/>
+    </group>
 </vector>
